# mdmg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changelog.md  LICENSE.md  README.md
.github/workflows/: rust.yml
.mdmg/: command.md
src/: command.rs  delete_executor.rs  error.rs  file.rs  generated_file_repository.rs  lib.rs  logger.rs  main.rs  markdown.rs  opts.rs  output.rs  rename_executor.rs  scaffold.rs  scaffold_executor.rs  template.rs  template_repository.rs
src/commands/: delete.rs  generate.rs  list.rs  mod.rs  rename.rs  setup.rs
support/xdg_data_dir/mdmg/: file4.md
