[package]
name = "mdmg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
handlebars = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
Inflector = "0.11.4"
comrak = "0.11"
[dev-dependencies]
pretty_assertions = "1.0"
