[package]
name = "mdmg"
authors = ['himanoa <matsunoappy@gmail.com>']
description = "A scaffold prototype code tool"
version = "0.1.1"
edition = "2018"
license = "MIT"
readme = "README.md"

[package.metadata.deb]
maintainer = "himanoa <matsunoappy@gmail.com>"
copyright = "2021, himanoa <matsunoappy@gmail.com>"
license-file = ["LICENSE.md", "4"]
extended-description = """\
A markdown driven scaffolding tool. """
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/mdmg", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mdmg/README", "644"],
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
handlebars = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
Inflector = "0.11.4"
comrak = "0.11"
anyhow = "1.0.44"
thiserror="1.0.30"
yansi = "0.5.0"
[dev-dependencies]
pretty_assertions = "1.0"
[features]
fs-test = []
